examples/compute/route.yaml
apiVersion: compute.gcp.upbound.io/v1beta1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: compute/v1beta1/route
  labels:
    testing.upbound.io/example-name: route
  name: route
spec:
  forProvider:
    destRange: 15.0.0.0/24
    networkSelector:
      matchLabels:
        testing.upbound.io/example-name: route
    nextHopIp: 10.132.1.5
    priority: 100
